--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="theme-color" content="black">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <link rel="shortcut icon" href="/images.logo.png">
+    <link rel="icon" href="/images.logo.png">
+    <link rel="apple-touch-icon" href="/images/logo.png">
+    <link rel="apple-touch-startup-image" href="/images/logo.png">
     <title>Manga Zap</title>
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
