--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="manifest" href="manifest.json" />
+    <meta name="theme-color" content="#ffffff" />
     <meta charset="UTF-8">
     <meta name="theme-color" content="black">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -15,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <style>
         html, body {
+            background-color: #f1f1f1;
             font-family: Roboto, sans-serif;
             margin: 0;
         }
@@ -22,7 +25,6 @@
 </head>
 <body>
 <manga-zap></manga-zap>
-<script src="main.dart" type="application/dart"></script>
-<script src="packages/browser/dart.js"></script>
+<script src="main.dart.js"></script>
 </body>
 </html>
